# vllm_plugin

./: .gitignore  .pylintrc  BLOG_STATUS.md  CHANGELOG.md  CLAUDE.md  final_blog_vllm_plugin.md  matrix_summary.md  offline_example.py  openai_client_curl.sh  openai_client_multi_round_example.py  pyproject.toml  readme.md
.github/workflows/: codeql.yml  dependency-audit.yml  dependency-review.yml  publish.yml  pylint.yml  release.yml  security.yml  version-matrix-smoke.yml
.learnings/: norepeat-ngram-bug-resolution.md
example_scripts/: offline_example.py  openai_client_curl.sh  openai_client_example.py  openai_client_multi_round_example.py  openai_serve_example.sh
private_scripts/: serve_test_meralion2_ctm.sh  serve_test_meralion2_general.sh
scripts/compatibility/: generate_summary_from_artifacts.py  readme.md  run_version_matrix_local.py  version_matrix_candidates.yaml
scripts/examples/: serve_meralion2_ctm.sh  serve_meralion2_general.sh
src/vllm_plugin_meralion2/: __init__.py  vllm010.py  vllm0101.py  vllm064_post1.py  vllm085.py
src/vllm_plugin_meralion2/streaming/: __init__.py  (+4 more)
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_asr_latency_eval.py  test_asr_transcription_eval.py  test_mel_cache.py  test_model_correctness.py  test_model_registration.py  test_multimodal_processing.py  test_processing_correctness.py  test_streaming_endpoint.py  test_streaming_protocol.py  test_streaming_session.py  test_utils.py  test_version_compatibility.py
tests/text_normalizer/: __init__.py  basic.py  preprocess_text.py
(+4 files in other folders)
