# pyproject.toml

[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vllm_plugin_meralion2"
version = "0.1.4"
description = "A vLLM plugin to register the MERaLiON-2-10B model architecture with vLLM’s plugin system."
authors = [{name = "MERaLiON Team"},]
readme = "readme.md"

# Python version compatibility
requires-python = ">=3.9"

# your runtime dependencies
dependencies = [
  "librosa",
]

[project.urls]
Modelpage = "https://huggingface.co/MERaLiON/MERaLiON-2-10B" 
Homepage = "https://github.com/YingxuH/vllm_plugin"
Documentation = "https://github.com/YingxuH/vllm_plugin/blob/main/readme.md"
Changelog = "https://github.com/YingxuH/vllm_plugin/blob/main/CHANGELOG.md"

[project.entry-points."vllm.general_plugins"]
register_dummy_model = "vllm_plugin_meralion2:register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "python3 -m build"
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci", "test"]